--- a/.github/workflows/build_azerothcore.yml
+++ b/.github/workflows/build_azerothcore.yml
@@ -2,8 +2,8 @@ name: build_azerothcore
 
 on:
   workflow_dispatch:
-  push: { branches: ["main"] }
-  schedule: [{ cron: "0 19 * * *" }]
+  schedule: 
+   - cron: 0 19 * * *
 
 jobs:
   build:
