--- a/.github/workflows/build_Release.yml
+++ b/.github/workflows/build_Release.yml
@@ -122,13 +122,9 @@ jobs:
       - name: 打包产物
         id: package
         run: |
-          cd "$BUILD_DIR"
           tar -czvf \
             acore-${{ steps.ts.outputs.utc }}.tar.gz \
-            /etc \
-            /bin \
-            /include \
-            /lib \
+            -C "$BUILD_DIR" .
           echo "name=acore-${{ steps.ts.outputs.utc }}.tar.gz" >> $GITHUB_OUTPUT
 
       - name: 保存产物到Artifact
